# ww2ogg-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
ww2ogg/: Cargo.toml
ww2ogg-cli/: Cargo.toml
ww2ogg-cli/src/: main.rs
ww2ogg/src/: wwise_riff_vorbis.rs
